// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayMultiSelect Lifecycle itemAdded should not emit an event when the input value exists on the selected items 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input name="selectedItems" type="hidden" value="foo">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="0">
            <span class="label-item label-item-expand">foo</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input class="form-control-inset" ref="input" type="text" value="foo">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect and add the class focus when focus on input 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group focus">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect and clear the input values after the onblur event 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect and keep the focus of the input when selecting an item 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group focus">
          <input name="selectedItems" type="hidden" value="foo">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="0">
            <span class="label-item label-item-expand">Foo</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input name="selectedItems" type="hidden" value="bar">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="1">
            <span class="label-item label-item-expand">Bar</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect and remove the focus when blur on input 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with classes 1`] = `
<div class="from-group my-custom-class">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with id 1`] = `
<div class="from-group" id="myId">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with input name from selected items 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with label 1`] = `
<div class="from-group">
  <label>Foo</label>
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with multiple values with comma at the end 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group focus">
          <input type="hidden" value="a" name="selectedItems">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="0">
            <span class="label-item label-item-expand">a</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input name="selectedItems" type="hidden" value="b">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="1">
            <span class="label-item label-item-expand">b</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input name="selectedItems" type="hidden" value="something">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="2">
            <span class="label-item label-item-expand">something</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with placeholder 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" placeholder="Placeholder" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with select button hidden 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render a ClayMultiSelect with selected items 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input name="selectedItems" type="hidden" value="foo">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="0">
            <span class="label-item label-item-expand">Foo</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input name="selectedItems" type="hidden" value="bar">
          <span class="label label-secondary label-dismissible" id="item-tag" tabindex="0" data-tag="1">
            <span class="label-item label-item-expand">Bar</span>
            <span class="label-item label-item-after">
              <button class="btn close" aria-label="close" tabindex="-1" type="button">
                <svg class="lexicon-icon lexicon-icon-times" focusable="false" role="presentation">
                  <use xlink:href="icons.svg#times"></use>
                </svg>
              </button>
            </span>
          </span>
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;

exports[`ClayMultiSelect should render the default markup 1`] = `
<div class="from-group">
  <div class="input-group input-group-stacked-sm-down">
    <div class="input-group-item">
      <div class="dropdown dropdown-full">
        <div class=" form-control form-control-tag-group">
          <input class="form-control-inset" ref="input" type="text" value="">
          <ul class="dropdown-menu" ref="dropdown"></ul>
        </div>
      </div>
      <div class="form-feedback-group">
        <div class="form-text">You can use a comma to enter tags</div>
      </div>
    </div>
    <div class="input-group-item input-group-item-shrink">
      <button class="btn btn-secondary" type="button">select</button>
    </div>
  </div>
</div>
`;
